0.02
 - Add ERRORS section to doc.
 - Add tests for errors in constructor.
 - Fix link to repository and bugtracker.

0.01 2023-06-10T18:59:18+02:00
 - First version.