@@ -2,7 +2,7 @@ use strict;
 use warnings;
 
 use Data::Message::Simple;
-use Test::More 'tests' => 3;
+use Test::More 'tests' => 4;
 use Test::NoWarnings;
 
 # Test.
@@ -18,3 +18,10 @@ $obj = Data::Message::Simple->new(
 	'type' => 'error',
 );
 is($obj->type, 'error', 'Get explicit type (error).');
+
+# Test.
+$obj = Data::Message::Simple->new(
+	'text' => 'This is message.',
+	'type' => undef,
+);
+is($obj->type, 'info', 'Get default type (info).');
