@@ -1,6 +1,7 @@
 0.02
  - Add ERRORS section to doc.
  - Add tests for errors in constructor.
+ - Fix default value of type.
  - Fix link to repository and bugtracker.
 
 0.01 2023-06-10T18:59:18+02:00
